gcc/testsuite/gm2/iso/fail/badconst.mod
MODULE badconst ;

CONST
   foo = 1 ;
BEGIN
   IF Foo = 1
   THEN
   END
END badconst.
